engine/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_scrolled_handlers.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
                                                                                                                
  PreToolUse hooks                                                                                              
  Turn hooks on or off. Your changes are saved automatically.                                                   
↑                                                                                                               
  [x]  3  Check tool 3                                                                                          
  [x]  4  Unnamed hook                                                                                          
  [x]  5  Check tool 5                                                                                          
  [x]  6  Unnamed hook                                                                                          
  [x]  7  Check tool 7                                                                                          
  [x]  8  Unnamed hook                                                                                          
  [x]  9  Check tool 9                                                                                          
› [x] 10  Unnamed hook                                                                                          
↓                                                                                                               
  Event     PreToolUse                                                                                          
  Matcher   Bash                                                                                                
  Source    User config - /tmp/hooks.json                                                                       
  Command   /tmp/hook-9.sh                                                                                      
  Mode      Sync                                                                                                
  Timeout   30s                                                                                                 
  Trust     Trusted                                                                                             
                                                                                                                
                                                                                                                
  space/enter toggle · esc back
